--- a/tox.ini
+++ b/tox.ini
@@ -63,6 +63,7 @@ deps =
 description = PyLint run on default environment
 setenv = PYLINTHOME = {toxinidir}
 commands = {toxinidir}/tests/docker/scripts/pylint.sh python/nav --jobs=4 --rcfile=python/pylint.rc --disable=I,similarities --output-format=parseable
+basepython = python3.5
 
 [testenv:docs]
 description = Just build the Sphinx documentation
